--- a/styles/sections/_landing.scss
+++ b/styles/sections/_landing.scss
@@ -15,7 +15,7 @@
       margin-bottom: 1rem;
       opacity: 0;
       text-shadow: .1rem .1rem .25rem rgba(0, 0, 0, .25);
-      @include fadein(.5s, .5s);
+      @include fadein(.2s, .5s);
     }
     
     button {
@@ -28,7 +28,7 @@
       opacity: 0;
       margin-top: 1rem;
       @include transition(background-color 0.25s linear);
-      @include fadein(.5s, .5s);
+      @include fadein(.2s, .5s);
 
       &:hover {
         background: rgba(0, 0, 0, .25);
@@ -65,7 +65,7 @@
     margin: 1.5rem;
     cursor: pointer;
     opacity: 0;
-    @include fadein(.5s, 1.25s);
+    @include fadein(.2s, 1.25s);
 
     &.cc {
       left: 0;
